...
    <string name="loginSuccess">You are now logged in</string>
    <string name="loginFailPasswordError">Wrong credentials</string>
    <string name="loginFailEmailError">Wrong credentials</string>
    <string name="loginInProgress">Logging in</string>

    <!-- Register -->
    <string name="registerUsernameAlreadyUsed">This username is already used !</string>
    <string name="registerAccountBeingCreated">Your account is being created</string>
    <string name="registerAccountCreated">Your account has been created</string>
    <string name="registerUsernameRequired">Your username is required !</string>
    <string name="registerEmailRequired">Your email is required !</string>
    <string name="registerPasswordLengthError">Please choose a password of more than 8 characters !</string>
    <string name="registerPasswordsMatchingError">Your passwords do not match !</string>
    <string name="registerEmailHint">E-mail</string>
    <string name="registerUsernameHint">username</string>
    <string name="registerPasswordConfirmationHint">Confirm your password</string>
    <string name="registerPasswordHint">Password</string>
    <string name="registerSignUp">Sign Up</string>
    <string name="registerSignInLink">Already have an account ?</string>

    <!-- Achievements -->
...


    <string name="camera_alert">Device has only one camera!</string>
    <string name="switch_cam">Switch Camera</string>

    <!-- Exceptions -->
    <string name="noConnexion">Please check your internet connection</string>
    <string name="incompleteData">The data returned is not complete</string>

    <string name="mapbox_access_token">pk.eyJ1IjoiYS1pYm0iLCJhIjoiY2s4cmpoamd6MGEyeTNlbXNyaXZmcXNveiJ9.B5j1E7U4A_Pon-mHaRKrnQ</string>


    <!-- Guest mode -->
...
    <!-- About Fragment -->
    <string name="appVersion">Version 1.0.0</string>
    <string name="advertisements">Some advertisements here...</string>
    <string name="appDescription">Welcome to Kandle ! Share your best pictures and jokes with nearby Kandlers :)</string>
    <string name="joinUs">Connect with us</string>
    <string name="website">https://www.google.ch/</string>
    <string name="email">yanisepfl@gmail.com</string>
    <string name="github">yanisepfl</string>
    <string name="facebook">Yanis Berkani</string>
    <string name="instagram">yanisbrk</string>

    <!-- Post Fragment -->
    <string name="tooFarToLikePost">You are too far away from the post to like it</string>
...
