...
        android:layout_width="341dp"
        android:layout_height="38dp"
        android:backgroundTint="@color/backGroundRed"
        android:ems="10"
        android:hint="@string/registerEmailHint"
        android:inputType="textEmailAddress"
        app:layout_constraintBottom_toTopOf="@+id/password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/username" />

    <TextView
        android:id="@+id/appName"
...
        android:layout_height="38dp"
        android:backgroundTint="@color/backGroundRed"
        android:ems="10"
        android:hint="@string/registerPasswordHint"
        android:inputType="textPersonName"
        android:password="true"
        app:layout_constraintBottom_toTopOf="@+id/passwordConfirm"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email" />

    <EditText
        android:id="@+id/passwordConfirm"
...
        android:layout_height="38dp"
        android:backgroundTint="@color/backGroundRed"
        android:ems="10"
        android:hint="@string/registerPasswordConfirmationHint"
        android:inputType="textPersonName"
        android:password="true"
        app:layout_constraintBottom_toTopOf="@+id/loginBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password" />

    <Button
        android:id="@+id/loginBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/button_background"
        android:text="@string/registerSignUp"
        app:layout_constraintBottom_toTopOf="@+id/signInLink"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordConfirm" />

    <TextView
        android:id="@+id/signInLink"
...
