...
                        android:title="@string/settings_item" />
                    <item
                        android:id="@+id/about"
                        android:icon="@drawable/ic_about_24dp"
                        android:title="@string/about_us_item" />
                    <item
                        android:id="@+id/logout"
                        android:icon="@drawable/ic_logout_black_24dp"
                        android:title="@string/logout_item" />
                </group>
            </menu>
        </item>
    </group>
...
